# onilang

./: Cargo.toml  test.oni  test2.oni  test3.oni  test4.oni
src/: compiler.rs  error.rs  eval.rs  lexer.rs  lib.rs  main.rs  parser.rs
