[package]
name = "onilang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
chumsky = { git = "https://github.com/zesterer/chumsky.git" }
clap = { version = "3.1.18", features = ["derive"] }
logos = "0.12.0"
thiserror = "1.0.31"
